# emonk

./: .gitignore  AUTHORS  BUGS  CHANGES  LICENSE  Makefile  Makefile.am  NEWS  README  README.md  SPIDERMONKEY  THANKS  TODO  acinclude.m4.in  bootstrap  configure.ac  rebar  rebar.config
c_src/: GNUmakefile  Makefile  alias.h  emonk.c  emonk.h  emonk_drv.c  emonk_to_erl.c  emonk_to_js.c  emonk_util.c  emonk_util.h  job.c  job.h  main.c  queue.c  queue.h  req.c  req.h  state.c  state.h  to_erl.c  to_js.c  util.c  util.h  vm.c  vm.h  worker.c  worker.h
docs/: emonk.graffle
ebin/: emonk.app
priv/: Makefile.am
priv/c_src/: spidermonkey_drv.c
src/: Makefile.am  emonk.app.tpl.in  emonk.erl
src/emonk/: Makefile.am
src/emonk/priv/: Makefile.am  emonk.c  emonk.h  emonk_comm.c  emonk_comm.h  emonk_drv.c  emonk_to_erl.c  emonk_to_js.c  emonk_util.c  emonk_util.h  spidermonkey.c  spidermonkey_drv.c  test.c  util.c
src/emonk/src/: emonk.app.tpl.in  emonk.erl  emonk_cache.erl  emonk_driver.erl  emonk_sup.erl
src/etap/: Makefile.am
src/etap/src/: etap.erl
support/: build_libs.sh
test/: 001-basics.t  001-load-modules.t  002-load-driver.t  002-new-context.t  002-test-workers.t  003-basic-calls.t  003-start-driver.t  003-test-ctx-creation.t  004-basic-calls.t  004-call-drivert.t  004-erl-to-js.t  005-erl-to-js.t  005-js-to-erl.t  005-leak-sniff.t  006-erl-to-js.t  006-js-to-erl.t  007-js-send-message.t  007-js-to-erl.t  Makefile.am  bench.tpl  best-port-comm.es  pairs.txt  run.tpl  test_util.erl
test/smoke/: restarts.erl  segfault.es  separate-contexts.es  single-context.es
utils/: fetch_libs.sh
